# cppwebserver

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TODO-list.md  conanfile.txt  deactivate_conanbuild.sh  deactivate_conanrun.sh  docker-compose.yml  docker-notes.txt  instruct.txt  main.cpp  notes.txt
include/: server.hpp  user.hpp
src/: main.cpp  server.cpp
